--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,6 +63,7 @@
         "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
     },
     "files": [
-        "index.ts"
+        "index.ts",
+        "example.ts"
     ]
 }
