update folder location

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -62,7 +62,7 @@
 		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
 	},
 	"files": [
-		"./examples/hello-world.ts",
+		"./examples/hello-world/hello-world.ts",
 		"./examples/stopwatch/stopwatch.ts"
 	]
 }
