--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
     "name": "@dommandy/mealy",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "state machines made in typescript",
     "license": "MIT",
     "repository": "domrally/mealy",
-    "main": "index.js",
+    "main": "./src/main.js",
+	 "types": "./src/main.d.ts",
     "keywords": [
         "mealy",
-        "typescript",
         "finite",
         "state",
-        "machines",
+        "machine",
         "pattern",
         "transducer",
         "proxy",
+        "async",
+        "await",
+        "fsm",
         "observer",
         "Dom",
         "Dominic",
         "Mandy",
         "dommandy",
         "domrally",
+        "js",
+        "ts",
+        "javascript",
+        "typescript",
         "npm",
-        "package"
+        "node",
+        "package",
+        "manager"
     ]
 }
