--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 		// "allowJs": true,                             /* Allow javascript files to be compiled. */
 		// "checkJs": true,                             /* Report errors in .js files. */
 		// "jsx": "preserve",                           /* Specify JSX code generation: 'preserve', 'react-native', 'react', 'react-jsx' or 'react-jsxdev'. */
-		// "declaration": true,                         /* Generates corresponding '.d.ts' file. */
+		"declaration": true,                         /* Generates corresponding '.d.ts' file. */
 		// "declarationMap": true,                      /* Generates a sourcemap for each corresponding '.d.ts' file. */
 		// "sourceMap": true,                           /* Generates corresponding '.map' file. */
 		// "outFile": "./",                             /* Concatenate and emit output to single file. */
@@ -62,7 +62,7 @@
 		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
 	},
 	"files": [
-		"./examples/hello-world/hello-world.ts",
-		"examples/stopwatch/main.ts"
+		"./src/main.ts",
+		"./examples/stopwatch/stop-watch/stop-watch.ts"
 	]
 }
