--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@dommandy/mealy",
-    "version": "1.1.0",
+    "name": "@domrally/mealy",
+    "version": "0.1.0",
     "description": "state machines made in typescript",
     "license": "MIT",
     "repository": "domrally/mealy",
