--- a/package.json
+++ b/package.json
@@ -1,35 +1,29 @@
 {
-    "name": "@domrally/mealy",
-    "version": "0.1.0",
-    "description": "state machines made in typescript",
-    "license": "MIT",
-    "repository": "domrally/mealy",
-    "main": "./src/main.js",
-    "types": "./src/main.d.ts",
-    "keywords": [
-        "mealy",
-        "finite",
-        "state",
-        "machine",
-        "pattern",
-        "transducer",
-        "proxy",
-        "async",
-        "await",
-        "fsm",
-        "observer",
-        "Dom",
-        "Dominic",
-        "Mandy",
-        "dommandy",
-        "domrally",
-        "js",
-        "ts",
-        "javascript",
-        "typescript",
-        "npm",
-        "node",
-        "package",
-        "manager"
-    ]
+	"name": "mealtime",
+	"version": "0.1.0",
+	"description": "proxied state machines in typescript",
+	"license": "MIT",
+	"repository": "domrally/mealtime",
+	"main": "./src/main.js",
+	"types": "./src/main.d.ts",
+	"keywords": [
+		"mealtime",
+		"mealy",
+		"finite",
+		"state",
+		"machine",
+		"pattern",
+		"transducer",
+		"proxy",
+		"async",
+		"await",
+		"generator",
+		"iterator",
+		"iterable",
+		"fsm",
+		"js",
+		"ts",
+		"javascript",
+		"typescript"
+	]
 }
