--- a/tsconfig.json
+++ b/tsconfig.json
@@ -62,8 +62,8 @@
 		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
 	},
 	"files": [
-		"main.ts",
-		"examples/stop-watch/stop-watch.ts",
-		"test.ts"
+		"code/main.ts",
+		"demos/stop-watch/stop-watch.ts",
+		"tests/test.ts"
 	]
 }
