--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"description": "proxied state pattern in typescript",
 	"license": "MIT",
 	"repository": "domrally/mealtime",
-	"main": "code/mealtime.js",
-	"types": "code/mealtime.d.ts",
+	"main": "code/main.js",
+	"types": "code/main.d.ts",
 	"scripts": {
 		"test": "node tests/test.js"
 	},
