--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "mealtime",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "proxy state pattern made in typescript",
   "license": "MIT",
   "repository": "domrally/mealtime",
@@ -28,6 +28,11 @@
     "generator",
     "iterator",
     "iterable",
+    "handler",
+    "target",
+    "promise",
+    "publish",
+    "subscribe",
     "fsm",
     "js",
     "ts",
