--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
     "module": "ESNext", /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
     "declaration": true, /* Generates corresponding '.d.ts' file. */
     "esModuleInterop": true, /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
-    // "outFile": "./dist.js"
     "strict": true
   },
   "files": [
-    "index.ts"
+    "./code/index.ts",
+    "./tests/index.ts"
   ]
 }
