--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "name": "mealtime",
   "version": "0.0.42",
-  "description": "tools for proxy events in typescript",
+  "description": "tools for event proxies in typescript",
   "license": "Fair",
   "repository": "domrally/mealtime",
   "scripts": {
