--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     },
     "homepage": "https://domrally.github.io/peekeasy",
     "devDependencies": {
+        "texte": "^0.0.4",
         "gts": "^3.1.0",
         "typescript": "^4.0.3",
         "@types/node": "^14.11.2",
