--- a/package.json
+++ b/package.json
@@ -19,18 +19,8 @@
 		"forwarding",
 		"observer"
 	],
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "lint": "gts lint",
-        "clean": "gts clean",
-        "compile": "tsc",
-        "fix": "gts fix",
-        "prepare": "npm run compile",
-        "pretest": "npm run compile",
-        "posttest": "npm run lint"
-    },
     "directories": {
-        "test": "test"
+        "tests": "tests"
     },
     "repository": {
         "type": "git",
@@ -41,6 +31,32 @@
         "url": "https://github.com/domrally/peekeasy/issues"
     },
     "homepage": "https://domrally.github.io/peekeasy",
+    "scripts": {
+        "build": "npx vite build",
+        "prestart": "npm i && npx eslint --fix && npx prettier --write .",
+        "start": "npx vite",
+        "test": "npm i && npm run lint && npm run unit && npm run integration",
+        "lint": "npx eslint && npx prettier --check .",
+        "unit": "node --experimental-specifier-resolution node --loader ts-node/esm tests/unit.test.ts",
+        "integration": "node --experimental-specifier-resolution node --loader ts-node/esm tests/integration.test.ts"
+    },
     "devDependencies": {
+        "@sveltejs/vite-plugin-svelte": "^1.0.0-next.42",
+        "@tsconfig/svelte": "^3.0.0",
+        "@types/node": "^14.18.15",
+        "@typescript-eslint/eslint-plugin": "^5.22.0",
+        "@typescript-eslint/parser": "^5.22.0",
+        "eslint": "^8.14.0",
+        "eslint-config-alloy": "^4.5.1",
+        "eslint-config-prettier": "^8.5.0",
+        "prettier": "2.6.2",
+        "svelte-check": "^2.7.0",
+        "svelte-preprocess": "^4.10.6",
+        "ts-node": "^10.7.0",
+        "typescript": "^4.6.4",
+        "vite": "^2.9.8"
+    },
+    "engines": {
+        "node": "16.x"
     }
 }
