--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,31 +3,47 @@
 
 name: build
 
-on:
-    release:
-        types: [created]
+on: [push]
 
 jobs:
-    build:
+    test:
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                testScriptName: [lint, unit, integration]
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v2
-              with:
-                  node-version: 14
-            - run: npm ci
-            - run: npm test
+            - name: opening project
+              uses: actions/checkout@v3
 
-    publish-npm:
-        needs: build
+            - name: setting up Node.js
+              uses: actions/setup-node@v3
+              with:
+                  node-version: '16.x'
+
+            - name: installing dependencies
+              run: npm ci
+
+            - name: running tests
+              run: npm run ${{ matrix.testScriptName }}
+
+    publish:
+        if: github.ref_name == 'main'
+        needs: test
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v2
+            - name: opening project
+              uses: actions/checkout@v3
+
+            - name: setting up Node.js
+              uses: actions/setup-node@v3
               with:
-                  node-version: 14
+                  node-version: '16.x'
                   registry-url: https://registry.npmjs.org/
-            - run: npm ci
-            - run: npm publish
+
+            - name: installing dependencies
+              run: npm ci
+
+            - name: publish node package
+              run: npm publish
               env:
                   NODE_AUTH_TOKEN: ${{secrets.npm_token}}
