--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,9 @@ jobs:
       - name: installing dependencies
         run: npm ci
 
+      - name: compile project
+        run: npx tsc
+
       - name: publish node package
         run: npm publish
         env:
