--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,7 @@
 	},
 	"compilerOptions": {
 		// @tsconfig/node16/tsconfig.json
-		"lib": [
-			"es2021"
-		],
+		"lib": ["es2021"],
 		"module": "commonjs",
 		"target": "es2021",
 		"strict": true,
@@ -25,7 +23,5 @@
 		"declaration": true,
 		"resolveJsonModule": true
 	},
-	"include": [
-		"src/**/*"
-	]
+	"include": ["src/**/*"]
 }
