--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 	},
 	"compilerOptions": {
 		// @tsconfig/node16/tsconfig.json
-		"lib": ["es2021"],
+		"lib": ["es2021", "dom"],
 		"module": "commonjs",
 		"target": "es2021",
 		"strict": true,
