--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 		"eslint-config-alloy": "<5",
 		"eslint-config-prettier": "<9",
 		"prettier": "<3",
-		"ts-node": "^10.8.0",
+		"ts-node": "<11",
 		"typescript": "<5"
 	}
 }
