--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
 	"scripts": {
 		"format": "npx eslint --fix && npx prettier --write .",
 		"start": "npx ts-node docs/fizz-buzz.ts",
-		"test": "npx ts-node tests/tests.ts",
+		"test": "npm run lint && npm run unit && npm run integration",
 		"lint": "npx eslint && npx prettier --check .",
-		"unit": "npx ts-node tests/unit/unit.ts",
-		"integration": "npx ts-node tests/integration/integration.ts"
+		"unit": "npx ts-node src/tests/unit/unit.ts",
+		"integration": "npx ts-node src/tests/integration/integration.ts"
 	},
 	"files": [
 		"build/src/exports"
