--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	},
 	"scripts": {
 		"format": "npx eslint --fix && npx prettier --write .",
-		"start": "npx ts-node docs/fizz-buzz.ts",
+		"start": "npx typedoc",
+		"docs": "npx jest",
 		"test": "npm run lint && npm run unit && npm run integration",
 		"lint": "npx eslint && npx prettier --check .",
 		"unit": "npx ts-node src/tests/unit/unit.ts",
@@ -48,6 +49,7 @@
 		"eslint-config-prettier": "<9",
 		"prettier": "<3",
 		"ts-node": "<11",
+		"typedoc": "^0.22.17",
 		"typescript": "<5"
 	}
 }
