--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"license": "MIT",
 	"name": "peekeasy",
-	"version": "0.5.1",
+	"version": "0.7.0",
 	"author": "Dom Mandy",
 	"main": "build/src/exports/exports.js",
 	"types": "build/src/exports/exports.d.ts",
@@ -35,12 +35,17 @@
 		"event",
 		"proxy",
 		"state",
+		"action",
+		"stream",
 		"forward",
 		"pattern",
 		"delegate",
+		"iterator",
 		"observer",
 		"delegation",
-		"forwarding"
+		"forwarding",
+		"vectorized",
+		"web-assembly"
 	],
 	"devDependencies": {
 		"@types/node": "<15",
