--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
 	"license": "MIT",
 	"name": "peekeasy",
-	"version": "0.8.0",
+	"version": "0.8.1",
 	"author": "Dom Mandy",
-	"main": "build/src/exports/exports.js",
-	"types": "build/src/exports/exports.d.ts",
+	"main": "build/exports/exports.js",
+	"types": "build/exports/exports.d.ts",
 	"homepage": "https://domrally.github.io/peekeasy",
 	"description": "tools for observing proxies in typescript & web assembly",
-	"engines": {
-		"node": "18"
-	},
 	"scripts": {
 		"format": "npx eslint --fix && npx prettier --write .",
 		"start": "npx typedoc",
@@ -19,7 +16,7 @@
 		"integration": "npx ts-node src/tests/integration/integration.ts"
 	},
 	"files": [
-		"build/src/exports"
+		"build/exports"
 	],
 	"exports": {
 		".": "./build/src/exports/exports.js"
