--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"homepage": "https://domrally.github.io/peekeasy",
 	"description": "tools for observing proxies in typescript & web assembly",
 	"scripts": {
-		"format": "npx eslint --fix && npx prettier --write .",
+		"stop": "npx eslint --fix && npx prettier --write .",
 		"start": "npx typedoc",
 		"test": "npm run lint && npm run unit && npm run integration",
 		"lint": "npx eslint && npx prettier --check .",
@@ -33,12 +33,12 @@
 		"proxy",
 		"state",
 		"action",
-		"stream",
 		"forward",
 		"pattern",
 		"delegate",
 		"iterator",
 		"observer",
+		"reference",
 		"delegation",
 		"forwarding",
 		"vectorized",
