--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"main": "build/exports/exports.js",
 	"types": "build/exports/exports.d.ts",
 	"homepage": "https://domrally.github.io/peekeasy",
-	"description": "proxy objects for delegating to patterns in typescript",
+	"description": "delegated proxy tools in typescript",
 	"scripts": {
 		"stop": "npx eslint --fix && npx prettier --write .",
 		"start": "npx typedoc",
