--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
 	"homepage": "https://domrally.github.io/peekeasy",
 	"description": "delegated proxy tools in typescript",
 	"scripts": {
-		"examples": "npx ts-node src/tests/examples/examples.ts",
+		"example": "npx ts-node src/tests/example/example.ts",
 		"integration": "npx ts-node src/tests/integration/integration.ts",
 		"lint": "npx eslint && npx prettier --check .",
 		"start": "npx typedoc",
 		"stop": "npx eslint --fix && npx prettier --write .",
-		"test": "npm run examples && npm run integration && npm run lint && npm run unit",
+		"test": "npm run example && npm run integration && npm run lint && npm run unit",
 		"unit": "npx ts-node src/tests/unit/unit.ts"
 	},
 	"files": [
