--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
 	"license": "MIT",
 	"name": "peekeasy",
-	"version": "0.12.1",
+	"version": "0.16.0",
 	"author": "Dom Mandy",
 	"main": "build/exports/exports.js",
 	"types": "build/exports/exports.d.ts",
 	"homepage": "https://domrally.github.io/peekeasy",
-	"description": "tools for observing proxies in typescript & web assembly",
+	"description": "delegated proxy tools in typescript",
 	"scripts": {
-		"stop": "npx eslint --fix && npx prettier --write .",
-		"start": "npx typedoc",
-		"test": "npm run lint && npm run unit && npm run integration",
+		"example": "npx ts-node src/tests/example/example.ts",
+		"integration": "npx ts-node src/tests/integration/integration.ts",
 		"lint": "npx eslint && npx prettier --check .",
-		"unit": "npx ts-node src/tests/unit/unit.ts",
-		"integration": "npx ts-node src/tests/integration/integration.ts"
+		"start": "npx typedoc",
+		"stop": "npx eslint --fix && npx prettier --write .",
+		"test": "npm run example && npm run integration && npm run lint && npm run unit",
+		"unit": "npx ts-node src/tests/unit/unit.ts"
 	},
 	"files": [
 		"build/exports"
@@ -41,8 +42,7 @@
 		"reference",
 		"delegation",
 		"forwarding",
-		"vectorized",
-		"web-assembly"
+		"vectorized"
 	],
 	"devDependencies": {
 		"@types/node": "*",
